deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "12345"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/lgypro/spring-boot-hello-world:v1
        name: spring-boot-hello-world
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 2000Mi
      imagePullSecrets:
      - name: my-secret
